Resolve "[wallet-extension] Outlined Buttons in Dark Mode"

--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -291,5 +291,5 @@ body.dark {
 
   /** buttons **/
   --ion-white-button-text: #eddcff;
-  --ion-white-button-background: #121212;
+  --ion-white-button-background: #1f1f1f;
 }
